QOLDEV-71 fix hover and outline states on mobile menus

--- a/src/assets/_project/_blocks/layout/header/_portal-links.scss
+++ b/src/assets/_project/_blocks/layout/header/_portal-links.scss
@@ -87,7 +87,7 @@
       &:after {
         border: none;
       }
-      
+
     }
 
     &:hover {
@@ -95,7 +95,7 @@
     }
 
     &:focus {
-      background-color: $qg-global-dark-grey-active;
+      background-color: $qg-global-dark-grey-dark-active;
     }
 
 
